services/apm/apm-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: apm-server
  name: apm-server
spec:
  type: LoadBalancer
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
      nodePort: 30082
  selector:
    io.kompose.service: apm-server
status:
  loadBalancer: {}
