services/apm/apm_elastic-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: apm_elastic
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/apm_elastic: "true"
  podSelector:
    matchLabels:
      io.kompose.network/apm_elastic: "true"
